--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "build/**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/build/index.html" }
-  ]
+	"version": 2,
+	"builds": [{ "src": "dist/main.js", "use": "@vercel/static" }],
+	"routes": [{ "src": "/(.*)", "dest": "dist/main.js" }]
 }
