--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
 	"version": 2,
-	"builds": [{ "src": "dist/main.js", "use": "@vercel/static" }],
-	"routes": [{ "src": "/(.*)", "dest": "dist/main.js" }]
+	"builds": [{ "src": "dist/index.html", "use": "@vercel/static" }],
+	"routes": [{ "src": "/(.*)", "dest": "dist/index.html" }]
 }
