--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
 	"version": 2,
-	"builds": [{ "src": "dist/index.html", "use": "@vercel/static" }],
-	"routes": [{ "src": "/(.*)", "dest": "dist/index.html" }]
+	"builds": [
+		{ "src": "dist/index.html", "use": "@vercel/static" },
+		{ "src": "dist/main.js", "use": "@vercel/static" }
+	],
+	"routes": [
+		{
+			"src": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|ico)$",
+			"dest": "/$1"
+		},
+		{
+			"src": "/.*",
+			"dest": "dist/index.html"
+		}
+	]
 }
