--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
 	"version": 2,
 	"builds": [
-		{ "src": "dist/index.html", "use": "@vercel/static" },
-		{ "src": "dist/main.js", "use": "@vercel/static" }
+		{
+			"src": "package.json",
+			"use": "@vercel/static-build",
+			"config": { "distDir": "dist" }
+		}
 	],
 	"routes": [
-		{
-			"src": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|ico)$",
-			"dest": "/$1"
-		},
-		{
-			"src": "/.*",
-			"dest": "dist/index.html"
-		}
+		{ "handle": "filesystem" },
+		{ "src": "/.*", "dest": "/index.html" }
 	]
 }
